[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "delivery-dispatcher"
version = "1.0.0"
description = "Delivery Dispatcher OpenEnv - AI logistics dispatch environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "gunicorn>=21.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["outputs*", "*.egg-info*"]
